k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: p-go-create-service
  namespace: p-go-create
spec:
  selector:
    app: p-go-create
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
