k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p-go-create-ingress
  namespace: p-go-create
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health/
            pathType: Prefix
            backend:
              service:
                name: p-go-create-service
                port:
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: p-go-create-service
                port:
                  number: 8080
